@@ -14,6 +14,11 @@
 
 # 2017-01-25
 # --------------------------------------------------------------------
+# + now save plots to ./plots and make dir if doesn't exist
+# + separate/individual plotting now works for all things!
+#   The key was to have a separate canvas name for everything
+#   and to Clone() the top and bottom pads - I'm super excited
+#   about this awesome feature!
 # V switching to 33-separate-plots.py
 # + cut a new release v3.2 since things are in good shape right now
 # + print bkgs and sigs activities in the legend
